# ffmpeg-dev-rs

./: .gitignore  Cargo.toml  FFMPEG-NOTES.txt  README.md  build.rs  headers  headers-ref.md
cbits/: defs.c  img_utils.c
examples/: h264_video_dec.rs  remux.rs
src/: api.rs  extra.rs  lib.rs  main.rs  sys.rs
src/api/: swresample.rs
src/extra/: defs.rs
