[package]
name = "ffmpeg-dev"
version = "0.1.0"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2018"
keywords = ["video", "ffmpeg"]
description = "Self contained (no net/sys deps), static rust bindings to ffmpeg."
license = "MIT"
homepage = "https://github.com/imager-io/ffmpeg-dev-rs"
repository = "https://github.com/imager-io/ffmpeg-dev-rs"
readme = "README.md"
publish = false

[dependencies]
libc = "^0.2"

[build-dependencies]
tar = "0.4.26"
flate2 = "1.0.12"
bindgen = "0.50"
glob = "0.3.0"